--- a/sonar-sec.yaml
+++ b/sonar-sec.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: sonarqube-devsecops
 type: Opaque
 data:
-  SONARQUBE_JDBC_USERNAME: cG9zdGdyZXM=
-  SONARQUBE_JDBC_PASSWORD: S20wQWM3UHFxNERuQTRNOA==
-  SONARQUBE_JDBC_URL: amRiYzpwb3N0Z3Jlc3FsOi8vMzQuMTIxLjgxLjU2OjU0MzIvc29uYXJfZGI=
+  SONARQUBE_JDBC_USERNAME: 
+  SONARQUBE_JDBC_PASSWORD: 
+  SONARQUBE_JDBC_URL: 
